--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -149,7 +149,7 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Research</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="/projects/topic">Research Topic</a>
+                                        <a class="dropdown-item" href="/topic/">Research Topic</a>
                                         <a class="dropdown-item" href="/projects/#">Project</a>
                                     </div>
                                 </li>
@@ -255,7 +255,7 @@
           <div class="col-6 col-md-2">
             <h5>Publication</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="/projects/topic">Research Topic</a></li>
+              <li><a class="text-muted" href="/topic">Research Topic</a></li>
               <li><a class="text-muted" href="/projects/#">Project</a></li>
               <li><a class="text-muted" href="/publication/journal">Journal</a></li>
               <li><a class="text-muted" href="/publication/conference">Conference</a></li>
