--- a/labweb/templates/labweb/awards.html
+++ b/labweb/templates/labweb/awards.html
@@ -25,7 +25,7 @@
       <header class="text-center">
       <br><br><br><br><br><br>
       <h1 class="display-4 font-weight-bold">Award-Winning</h1>
-      <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
+      <p class="font-italic text-muted mb-0">Our lab has been awarded in various competitons. </p>
       <br><br><br>
     </header>
     
@@ -37,6 +37,16 @@
               <a href="{{award.photo.url}}" class="mx-auto"><img src="{{award.photo.url}}" class="card-img-top" style="max-width: 300px;" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">{{award.title}}</h5>
+                <div style="padding: 5px;">
+                  {% for member in award.member.all %}
+                  <button type="button" class="btn btn-light degree-button" style="font-size: 12.5px;">
+                    {{ member.name }}
+                  </button>
+                 {% endfor %}
+               </div>
+               
+                  
+                </p>
                 <p class="card-text">{{award.contents}}</p>
                 <a href="{{award.award_link}}" class="card-link">
                   [link]
