--- a/labweb/templates/labweb/awards.html
+++ b/labweb/templates/labweb/awards.html
@@ -39,7 +39,7 @@
                 <h5 class="card-title">{{award.title}}</h5>
                 <div style="padding: 5px;">
                   {% for member in award.member.all %}
-                  <button type="button" class="btn btn-light degree-button" style="font-size: 12.5px;">
+                  <button type="button" class="btn btn-light degree-button" style="font-size: 12.5px; font-weight:500;">
                     {{ member.name }}
                   </button>
                  {% endfor %}
