[FE][Notice] Pagination

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -163,7 +163,7 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Boards</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="/awards/#">News</a>
+                                        <a class="dropdown-item" href="/notices/#">News</a>
                                         <a class="dropdown-item" href="/awards/#">Award</a>
                                         <a class="dropdown-item" href="/gallery/#">Gallery</a>
                                     </div>
@@ -249,7 +249,7 @@
             <ul class="list-unstyled text-small">
               <li><a class="text-muted" href="/member/filter">Member</a></li>
               <li><a class="text-muted" href="/history/#">History</a></li>
-              <li><a class="text-muted" href="/history/#">News</a></li>
+              <li><a class="text-muted" href="/notices/#">News</a></li>
               <li><a class="text-muted" href="/awards/#">Award</a></li>
               <li><a class="text-muted" href="/gallery/#">Gallery</a></li>
             </ul>
