--- a/labweb/templates/labweb/notice.html
+++ b/labweb/templates/labweb/notice.html
@@ -3,23 +3,18 @@
 
 
 {% block style %}
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
 <style>
+  
   @font-face{
     font-family: 'Big Caslon Medium';
     src: url('../fonts/Big Caslon Medium.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
-  
-  .card-link{
-    color: black;
-    font-weight: bolder;
-  }
-  .card-body p, a{
-    line-height: 1.0; /* 줄간격 값 조정 */
-  }
- 
+
 </style>
 
 {% endblock %}
@@ -30,13 +25,13 @@
     <header class="text-center">
     <br><br><br><br><br><br>
     <h1 class="display-4 font-weight-bold">Notice</h1>
-    <p class="font-italic text-muted mb-0">새로운 소식</p>
+    <p class="font-italic text-muted mb-0">We have new news!</p>
     <br><br><br>
   </header>
   <div class="row mt-5">
     <div class="col-12">
-      <table class="table table-hover table-striped">
-        <thead>
+      <table class="table table-hover">
+        <thead class="thead-light">
           <tr>
             <th>No.</th>
             <th>Title</th>
@@ -49,8 +44,8 @@
           {% if notices %}
           {%for notice in notices%}
           <tr>
-            <td>{{notice.id}}</td>
-            <td>{{notice.title}}</td>
+            <th scope="row">{{notice.id}}</th>
+            <td><a href="{% url 'notice_detail' notice_id=notice.id %}">{{notice.title}}</a></td>
             <td>{{notice.author}}</td>
             <td>{{notice.created_at|naturaltime}}</td>
             <td>{{notice.updated_at|naturaltime}}</td>
