fix: 메인페이지 AI/HW 합치기

--- a/labweb/static/css/home2.css
+++ b/labweb/static/css/home2.css
@@ -125,7 +125,7 @@
         z-index: -1;
       }
       .container {
-        font-family: "Ubuntu", sans-serif;
+        font-family: "Big Caslon Medium", sans-serif;
         position: relative;
         top: 0;
         width : 100%;
