--- a/labweb/templates/labweb/homev2.html
+++ b/labweb/templates/labweb/homev2.html
@@ -1,6 +1,8 @@
 <!-- NEW version -->
 <!--Version 23.5.31-->
 <!-- 23.6.15 --><!-- 23.6.18 --><!-- 23.6.29 -->
+<!-- 24.04.12 -->
+<!-- 현재 사용중 -->
 
 <head>
     {%load static %}
@@ -28,7 +30,7 @@
                   <div class="col" style="width: auto; display: inline-block;">
                       <div class="row" style="display: flex; justify-content: center; ">
                           <!-- <div class="col-1 py-1 px-lg-2" style="display: flex;justify-content: flex-end;"> -->
-                            <h1>iNES</h1>
+                            <h1>INES</h1>
                           <!-- </div> -->
                          
             
@@ -38,7 +40,7 @@
                                     <nav class="menu" style="display: inline-block; display: flex; flex-direction: column; justify-content: center;" >
                                         <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open-1"/>
                                         <label class="menu-open-button" for="menu-open-1">
-                                            AI
+                                            AI/HW
                                         </label>
             
                                         <a href="/member/#" class="menu-item"> <i class="fa fa-solid fa-user" ></i></a>
@@ -48,7 +50,7 @@
                                         <a href="#" class="menu-item"><i class="fa fa-solid fa-envelope"></i></a>    
                                     </nav>   
                                 </div>
-                                <div class="col" style="display: flex; align-items: flex-start;">
+                                <!-- <div class="col" style="display: flex; align-items: flex-start;">
                                     <nav class="menu" style="display: inline-block;">
                                         <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open-2"/>
                                         <label class="menu-open-button" for="menu-open-2">
@@ -61,7 +63,7 @@
                                         <a href="#" class="menu-item"><i class="fa fa-solid fa-trophy"></i></a>
                                         <a href="#" class="menu-item"><i class="fa fa-solid fa-envelope"></i></a>       
                                     </nav>
-                                </div>
+                                </div> -->
                               </div>
                           <!-- </div> -->
                         </div>
@@ -70,7 +72,7 @@
                   <div class="col">
                       <h3 class="span loader">
                           <span class="m">Click </span><br>
-                          <span class="m">'AI' or 'HW'</span><br>
+                          <span class="m">'AI/HW'</span><br>
                           <span class="m">for more info. </span><br>
                       
                           <span class="m m2"></span><br>
