--- a/labweb/templates/labweb/homev3_goal_in_May.html
+++ b/labweb/templates/labweb/homev3_goal_in_May.html
@@ -1,6 +1,7 @@
 <!-- NEW version -->
 <!--Version 23.5.31-->
 <!-- 23.6.15 --><!-- 23.6.18 --><!-- 23.6.29 -->
+<!-- 5월에는 AI/HW분리하여 업데이트 -->
 
 <head>
     {%load static %}
