fix: Research Topic항목을 네비비게이션바에서 주석처리. 추후 HW팀 내용도 반영 예정

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -149,7 +149,7 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Research</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="/topic/">Research Topic</a>
+                                        <!-- <a class="dropdown-item" href="/topic/">Research Topic</a>  토픽은 추후 (5월 이후)에 HW팀도 추가해서 할 예정 -->
                                         <a class="dropdown-item" href="/projects/#">Project</a>
                                     </div>
                                 </li>
