refactor: 당장 사용하지 않는 프로로젝트 제거, 완성되지 않은 contact 기능 주석처리

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -130,7 +130,7 @@
                     <nav class="navbar navbar-expand-md navbar-light">
                     
                         <!-- <a class="navbar-brand" href="https://front.codes/" target="_blank"><img src="https://assets.codepen.io/1462889/fcy.png" alt=""></a>	 -->
-                        <a class="navbar-brand" href="/home/#" ><img src="/static/images/logo/Logo2.png" alt="" ></a>	
+                        <a class="navbar-brand" href="/" ><img src="/static/images/logo/Logo2.png" alt="" ></a>	
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -168,9 +168,10 @@
                                         <a class="dropdown-item" href="/gallery/#">Gallery</a>
                                     </div>
                                 </li>
-                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                <!-- 나중에 contact.html 기능 구현하면 연결예정 -->
+                                <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="/contact/#">Contact</a>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                         
