--- a/labweb/templates/labweb/contact.html
+++ b/labweb/templates/labweb/contact.html
@@ -1,7 +1,7 @@
 
 {% extends 'labweb/base.html' %}
 
-
+<!-- 2024. 4. 12 공사중... 나중에 진짜 되도록 할 때 연결예정 -->
 {% block style %}
   <link rel="stylesheet" href="/static/css/contact.css">
 {% endblock %}
