--- a/labweb/templates/labweb/homev2.html
+++ b/labweb/templates/labweb/homev2.html
@@ -46,8 +46,9 @@
                                         <a href="/member/#" class="menu-item"> <i class="fa fa-solid fa-user" ></i></a>
                                         <a href="/projects/#" class="menu-item"> Proj </a>
                                         <a href="/publication/#" class="menu-item"> Pub</a>
-                                        <a href="/gallery/#" class="menu-item"><i class="fa fa-solid fa-trophy"></i></a>
-                                        <a href="#" class="menu-item"><i class="fa fa-solid fa-envelope"></i></a>    
+                                        <a href="/awards/#" class="menu-item"><i class="fa fa-solid fa-trophy"></i></a>
+                                        <!--  contact 부분은 추후에 기능 완성되면 추가 예정 -->
+                                        <!-- <a href="#" class="menu-item"><i class="fa fa-solid fa-envelope"></i></a>     -->
                                     </nav>   
                                 </div>
                                 <!-- <div class="col" style="display: flex; align-items: flex-start;">
