Refact:base, project화면에서 불필요한 코드 제거 (추후 추가예정)

--- a/labweb/templates/labweb/projects.html
+++ b/labweb/templates/labweb/projects.html
@@ -46,7 +46,8 @@
   </div>
 </div>
 </div>
-<nav aria-label="Page navigation example">
+<!-- 페이지네이션 기능 다 완료하면 추가할 예정 -->
+<!-- <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
     <li class="page-item disabled">
       <a class="page-link">Previous</a>
@@ -58,5 +59,5 @@
       <a class="page-link" href="#">Next</a>
     </li>
   </ul>
-</nav>
+</nav> -->
 {% endblock %}  
