--- a/labweb/templates/labweb/gallery/hw_gallery.html
+++ b/labweb/templates/labweb/gallery/hw_gallery.html
@@ -10,7 +10,7 @@
     <header class="text-center">
     <br><br><br><br><br><br>
     <h1 class="display-4 font-weight-bold">Gallery</h1>
-    <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
+    <p class="font-italic text-muted mb-0">HW team</p>
     <br><br><br>
   </header>
    
