#15-feat: Ai, HW 엔드포인트로 분리하여 notice  앱에 연결 + templates 정리

--- a/labweb/templates/labweb/notice/hw_notice_detail.html
+++ b/labweb/templates/labweb/notice/hw_notice_detail.html
@@ -1,28 +1,16 @@
-
 {% extends 'labweb/base.html' %}
-
 
 {% block style %}
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
 <style>
-  @font-face{
-    font-family: 'Big Caslon Medium';
-    src: url('../fonts/Big Caslon Medium.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
-  
- 
   .notice-title {
     margin-bottom: 15px;
     border-bottom: 2px solid #333;
   }
-
   .notice-meta {
     display: flex;
-    justify-content: space-evenly; /* 요소들 사이에 균등한 간격을 만듭니다 */
+    justify-content: space-evenly;
     font-size: 1rem;
     color: #666;
     margin-bottom: 20px;
@@ -32,18 +20,15 @@
     color: #777;
   }
   .notice-meta p {
-    margin-bottom: 4px; /* 각 메타 정보 사이의 간격을 줄입니다 */
+    margin-bottom: 4px;
   }
-
   .notice-content {
     margin-bottom: 40px;
     padding: 15px;
     border: 1px solid #ddd;
     background-color: #f9f9f9;
   }
-
 </style>
-
 {% endblock %}
 
 {% block content %}
@@ -51,11 +36,11 @@
 <div class="container py-5">
     <header class="text-center">
     <br><br><br><br><br><br>
-    <h1 class="display-4 font-weight-bold">Notice</h1>
+    <h1 class="display-4 font-weight-bold">Hardware Notice</h1>
     <p class="font-italic text-muted mb-0">We have new news!</p>
     <br><br><br>
   </header>
-  <a href="{% url 'notice_list' %}" class="btn btn-dark">&#10094; Back to Notice List</a>
+  <a href="{% url 'hw_notice_list' %}" class="btn btn-dark">&#10094; Back to Notice List</a>
 
   <div class="row mt-5">
     <div class="col-12">
@@ -76,16 +61,15 @@
   <div class="row mt-4">
     <div class="col-md-6 text-left">
         {% if prev_notice %}
-            <a href="{% url 'notice_detail' prev_notice.id %}" class="btn btn-outline-dark">&#10094; Prev</a>
+            <a href="{% url 'hw_notice_detail' prev_notice.id %}" class="btn btn-outline-dark">&#10094; Prev</a>
         {% endif %}
     </div>
     <div class="col-md-6 text-right">
         {% if next_notice %}
-            <a href="{% url 'notice_detail' next_notice.id %}" class="btn btn-outline-dark">Next &#10095;</a>
+            <a href="{% url 'hw_notice_detail' next_notice.id %}" class="btn btn-outline-dark">Next &#10095;</a>
         {% endif %}
     </div>
 </div>
 
 </div>
-  
-{% endblock %}  
+{% endblock %}
