--- a/labweb/templates/labweb/notice/hw_notice.html
+++ b/labweb/templates/labweb/notice/hw_notice.html
@@ -1,22 +1,18 @@
-
 {% extends 'labweb/base.html' %}
-
 
 {% block style %}
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
 <style>
-  
-  @font-face{
-    font-family: 'Big Caslon Medium';
-    src: url('../fonts/Big Caslon Medium.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  .notice-title a {
+    color: black;
+    text-decoration: none;
   }
 
+  .notice-title a:hover {
+    text-decoration: underline;
+  }
 </style>
-
 {% endblock %}
 
 {% block content %}
@@ -24,7 +20,7 @@
 <div class="container py-5">
     <header class="text-center">
     <br><br><br><br><br><br>
-    <h1 class="display-4 font-weight-bold">Notice</h1>
+    <h1 class="display-4 font-weight-bold">Hardware Notices</h1>
     <p class="font-italic text-muted mb-0">We have new news!</p>
     <br><br><br>
   </header>
@@ -45,7 +41,7 @@
           {%for notice in notices%}
           <tr>
             <th scope="row">{{notice.id}}</th>
-            <td><a href="{% url 'notice_detail' notice_id=notice.id %}">{{notice.title}}</a></td>
+            <td class="notice-title"><a href="{% url 'hw_notice_detail' notice_id=notice.id %}">{{notice.title}}</a></td>
             <td>{{notice.author}}</td>
             <td>{{notice.created_at|naturaltime}}</td>
             <td>{{notice.updated_at|naturaltime}}</td>
@@ -55,16 +51,11 @@
         </tbody>
       </table>
     </div>
-    
-   
-
   </div>
-   <!-- pagination -->
    <div class="row mt-5">
     <div class="col-12">
       <nav aria-label="Page navigation example">
        <ul class="pagination justify-content-center">
-        <!-- 이전 -->
         {% if page_obj.has_previous %}
           <li class="page-item">
             <a class="page-link" href="?page={{page_obj.previous_page_number}}"> &#10094; Prev </a>
@@ -74,15 +65,8 @@
             <a class="page-link" href="#"> &#10094;  Prev </a>
           </li>
         {% endif %}
-        
-        <!-- 현재 -->
-          <!-- <li class="page-item">
-            <a class="page-link" href="#">{{notices.number}} / {{ notices.paginator.num_pages }}</a>
-          </li>
-           -->
-       
-        {%for page in custom_range%}
-        {%if page == page_obj.number%}
+        {%for page in custom_range %}
+        {%if page == page_obj.number %}
           <li class="page-item">
             <a class="page-link" style="text-decoration:none; color: black;" href="?page={{page}}">{{page}}</a>
           </li>
@@ -92,7 +76,6 @@
         </li>
         {%endif%}
         {%endfor%}
-        <!-- 이후 -->
         {% if page_obj.has_next %}
           <li class="page-item">
             <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next &#10095;</a>
@@ -102,12 +85,9 @@
             <a class="page-link" href="#">Next &#10095;</a>
           </li>
         {% endif %}
-
       </ul>
      </nav>
     </div>
   </div>
-
 </div>
-  
-{% endblock %}  
+{% endblock %}
