#15-feat: Ai, HW 엔드포인트로 분리하여 projects 앱에 연결 + templates 정리

--- a/labweb/static/css/detail.css
+++ b/labweb/static/css/detail.css
@@ -122,4 +122,12 @@ h2 {
     background: #CD201F;
     color: #ffffff !important;
   }
+
+  .wrapper .other:hover,
+  .wrapper .other:hover .tooltip,
+  .wrapper .other:hover .tooltip::before {
+    background: #4B89DC;
+    color: #ffffff !important;
+  }
+  
   
