--- a/labweb/templates/labweb/projects_list.html
+++ b/labweb/templates/labweb/projects_list.html
@@ -1,3 +1,4 @@
+{% comment %} 안 씀 {% endcomment %}
 {% extends 'labweb/base.html' %}
 
 {% block content %}
@@ -5,7 +6,7 @@
     <h1>Projects</h1>
     <ul>
         {% for project in projects %}
-        <li>
+        <li>asdfsdfds
             <h2>{{ project.name }}</h2>
             <p>Description: {{ project.description }}</p>
             <p>Start: {{ project.start_date }}</p>
