--- a/labweb/templates/labweb/project/project_detail.html
+++ b/labweb/templates/labweb/project/project_detail.html
@@ -1,9 +1,9 @@
 {% extends 'labweb/base.html' %}
 
 {% block style %}
-  <link rel="stylesheet" href="/static/css/detail.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<link rel="stylesheet" href="/static/css/detail.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 {% endblock %}
 
 {% block content %}
@@ -16,10 +16,10 @@
             <article class="z-index-1 position-relative">
                 {% if project %}
                 <header class="py-7">
-					<a href="{% if project.team == 'AI' %}{% url 'ai_projects_list' %}{% else %}{% url 'hw_projects_list' %}{% endif %}" class="fw-700 text-decoration-none mb-3 mt-3 d-inline-block">
+                    <a href="{% if project.team == 'AI' %}{% url 'ai_projects_list' %}{% else %}{% url 'hw_projects_list' %}{% endif %}" class="fw-700 text-decoration-none mb-3 mt-3 d-inline-block">
                         <i class="fa fa-arrow-left"></i> All posts
                     </a>
-					<h1 class="headline" style="font-weight: 700;"> {{ project.name }}</h1>
+                    <h1 class="headline" style="font-weight: 700;">{{ project.name }}</h1>
                     <div class="row" style="width: auto;">
                         <div class="col-md-10" style="display: flex; justify-content: left; align-items: center;">
                             <p class="article-tags" style="margin-top: 1.5em; display: flex; justify-content: center;">
@@ -60,11 +60,12 @@
                         </div>
                     </div>
                 </header>
+                <!-- Author & Dates -->
                 <div class="article-meta d-flex justify-content-between mb-6">
                     <div id="author" class="center-v" style="display: inline-block;">
                         <p class="byline fw-700 mb-0">by {{ project.project_lead }}</p>
                     </div>
-                    <p class="dateline mb-0 fw-700">{{ project.start_date|date:"Y-m-d" }} - {{ project.end_date|date:"Y-m-d" }}</p>
+                    <p class="dateline mb-0 fw-700">{{ project.start_date|date:"Y-m-d" }}</p>
                 </div>
                 <main>
                     <section class="mb-7">
@@ -79,22 +80,14 @@
                             <div class="col">
                                 <p>{{ project.description }}</p>
                             </div>
-                            {% if project.photo_path %}
+                            <!-- Image Part -->
+                            {% for photo in photos %}
                             <div class="col">
-                                <figure><img class="img-fluid" src="{{ project.photo_path }}" alt="{{ project.name }}" />
+                                <figure>
+                                    <img class="img-fluid" src="{{ photo.photo.url }}" alt="Project photo" />
                                 </figure>
                             </div>
-                            {% endif %}
-                            {% if project.architecture_path %}
-                            <div class="col">
-                                <p class="lead mb-0 pb-3 mt-3" style="font-weight: bold;">
-                                    Architecture.
-                                </p>
-                                <figure><img class="img-fluid" src="{{ project.architecture_path }}" alt="{{ project.name }}" />
-                                    <figcaption class="small text-muted mt-2">{{ project.name }}</figcaption>
-                                </figure>
-                            </div>
-                            {% endif %}
+                            {% endfor %}
                         </div>
                     </section>
                 </main>
@@ -103,6 +96,5 @@
         </div>
     </div>
 </div>
-
 <script src="https://example.com/fontawesome/v5.15.4/js/all.js" data-auto-a11y="true"></script>
 {% endblock %}
