--- a/labweb/templates/labweb/project/ai_projects_list.html
+++ b/labweb/templates/labweb/project/ai_projects_list.html
@@ -1,7 +1,8 @@
 {% extends 'labweb/base.html' %}
 
 {% block style %}
-  <link rel="stylesheet" href="/static/css/member.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <style>
     .title-text {
       color: black;
@@ -11,6 +12,29 @@
     }
     .card-text {
       text-align: justify;
+    }
+    .card-img-top {
+      height: 200px; /* 고정 높이 설정 */
+      width: 100%; /* 너비를 100%로 설정 */
+      object-fit: cover; /* 이미지를 컨테이너에 맞추기 위해 잘라냄 */
+    }
+    .project-lead {
+      font-weight: bold;
+    }
+    .pagination .page-item .page-link {
+      color: #6c757d; /* 기본 텍스트 색상 */
+      background-color: #f8f9fa; /* 기본 배경색 */
+      border: 1px solid #dee2e6; /* 테두리 색상 */
+    }
+    .pagination .page-item.active .page-link {
+      color: #fff; /* 활성화된 페이지 텍스트 색상 */
+      background-color: #6c757d; /* 활성화된 페이지 배경색 */
+      border-color: #dee2e6; /* 활성화된 페이지 테두리 색상 */
+    }
+    .pagination .page-item .page-link:hover {
+      color: #fff; /* 호버 텍스트 색상 */
+      background-color: #6c757d; /* 호버 배경색 */
+      border-color: #dee2e6; /* 호버 테두리 색상 */
     }
   </style>
 {% endblock %}
@@ -28,20 +52,33 @@
   <div class="mx-auto card mb-3" style="max-width: 1100px; margin-top: 10px;">
     <div class="row no-gutters">
       <div class="col-md-4" style="max-width: 500px;">
-        <img src="{{ project.photo_path }}" class="img-thumbnail" style="width: 100%; height: auto;" alt="Image not found">
+        {% if project.first_photo %}
+          <img src="{{ project.first_photo.photo.url }}" class="img-thumbnail card-img-top" alt="Project image">
+        {% else %}
+          <div class="card-img-top" style="background-color: #f8f9fa;"></div> <!-- 빈 이미지를 위한 공간 -->
+        {% endif %}
       </div>
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">
             <a href="/ai/projects/{{ project.id }}/" class="title-text">{{ project.name }}</a>
           </h5>
-          <p class="card-text">{{ project.description|truncatewords:30 }}</p>
-          <p class="card-text"><small class="text-muted">{{ project.start_date|date:"Y-m-d" }}</small></p>
-          <h5 style="text-align: left;">
+          <h6 style="text-align: left;">
             {% for area in project.areas.all %}
-              <span class="badge badge-dark">{{ area.name }}</span>
+              <span class="badge badge-secondary">{{ area.area_name }}</span>
             {% endfor %}
-          </h5>
+          </h6>
+          <p class="card-text">{{ project.description|truncatewords:30 }}</p>
+          <div class="project-lead">
+            Project Leader: {{ project.project_lead }}
+            <div class="members">
+              {% for member in project.members.all %}
+                <span class="badge badge-light">{{ member.name }}</span>
+              {% endfor %}
+            </div>
+          </div>
+          <p class="card-text"><small class="text-muted">{{ project.start_date|date:"Y-m-d" }}</small></p>
+          
         </div>
       </div>
     </div>
@@ -49,40 +86,44 @@
   {% endfor %}
 
   <!-- 페이지네이션 -->
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-      {% if projects.has_previous %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ projects.previous_page_number }}">Previous</a>
-      </li>
-      {% else %}
-      <li class="page-item disabled">
-        <a class="page-link" href="#">Previous</a>
-      </li>
-      {% endif %}
-      
-      {% for num in projects.paginator.page_range %}
-      {% if projects.number == num %}
-      <li class="page-item active">
-        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-      </li>
-      {% else %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-      </li>
-      {% endif %}
-      {% endfor %}
-      
-      {% if projects.has_next %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ projects.next_page_number }}">Next</a>
-      </li>
-      {% else %}
-      <li class="page-item disabled">
-        <a class="page-link" href="#">Next</a>
-      </li>
-      {% endif %}
-    </ul>
-  </nav>
+  <div class="row mt-5">
+    <div class="col-12">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+          {% if projects.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ projects.previous_page_number }}">&#10094; Prev</a>
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#">&#10094; Prev</a>
+          </li>
+          {% endif %}
+          
+          {% for num in projects.paginator.page_range %}
+          {% if projects.number == num %}
+          <li class="page-item active">
+            <a class="page-link" href="?page={{ num }}" style="text-decoration:none;">{{ num }}</a>
+          </li>
+          {% else %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ num }}" style="text-decoration:none;">{{ num }}</a>
+          </li>
+          {% endif %}
+          {% endfor %}
+          
+          {% if projects.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ projects.next_page_number }}">Next &#10095;</a>
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#">Next &#10095;</a>
+          </li>
+          {% endif %}
+        </ul>
+      </nav>
+    </div>
+  </div>
 </div>
 {% endblock %}
